tests/language_modules/05_records/valid/record_declaration.vf
module RecordDeclaration

type Account is record
    id: Integer
    active: Boolean
end record

end RecordDeclaration