tests/language_modules/05_records/invalid_semantics/duplicate_record_field.vf
module DuplicateRecordField

type Account is record
    id: Integer
    id: Boolean
end record

end DuplicateRecordField